tests/NormalTests/paczka1/fuzzy1/43022646.err
Error in line 15: ot7U9sf A225 24,43
Error in line 12: S549 A399 16,7
Error in line 21: S549 A905 34,3
Error in line 18: ot7U9sf A399 36,8
Error in line 29: AcyhHEFnY2 A225 83,1
